chore: Update user table query and SQLC querier to support user updates
