# gapi/grpc_update_user.go
@@ -1,0 +1,99 @@
+package gapi
+
+import (
+	"context"
+	"database/sql"
+
+	"github.com/jackc/pgx/v5/pgtype"
+	db "github.com/tuanbui-n9/simplebank/db/sqlc"
+	"github.com/tuanbui-n9/simplebank/pb"
+	"github.com/tuanbui-n9/simplebank/util"
+	"github.com/tuanbui-n9/simplebank/validator"
+	"google.golang.org/genproto/googleapis/rpc/errdetails"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) UpdateUser(ctx context.Context, req *pb.UpdateUserRequest) (*pb.UpdateUserResponse, error) {
+	authPayload, err := server.authorizeUser(ctx)
+	if err != nil {
+		return nil, unauthenticatedError(err)
+	}
+
+	violations := validateUpdateUserRequest(req)
+	if len(violations) > 0 {
+		invalidArgumentError(violations)
+	}
+
+	if authPayload.Username != req.GetUsername() {
+		return nil, status.Errorf(codes.PermissionDenied, "cannot update other user's profile")
+	}
+
+	args := db.UpdateUserParams{
+		Username: req.GetUsername(),
+		FullName: pgtype.Text{
+			String: req.GetFullName(),
+			Valid:  req.FullName != nil,
+		},
+		Email: pgtype.Text{
+			String: req.GetEmail(),
+			Valid:  req.Email != nil,
+		},
+	}
+
+	if req.Password != nil {
+		hashedPassword, err := util.HashPassword(req.GetPassword())
+		if err != nil {
+			return nil, status.Errorf(codes.Internal, "Internal error: %v", err)
+		}
+
+		args.HashedPassword = pgtype.Text{
+			String: hashedPassword,
+			Valid:  true,
+		}
+	}
+
+	user, err := server.store.UpdateUser(ctx, args)
+	if err != nil {
+		errCode := db.ErrorCode(err)
+		if err == sql.ErrNoRows {
+			return nil, status.Errorf(codes.NotFound, "user not found: %v", err)
+		}
+		if errCode == db.UniqueViolation {
+			return nil, status.Errorf(codes.AlreadyExists, "user already exists: %s", err)
+		}
+		return nil, status.Errorf(codes.Internal, "Internal error: %v", err)
+	}
+
+	resp := &pb.UpdateUserResponse{
+		User: convertUser(user),
+	}
+
+	return resp, nil
+}
+
+func validateUpdateUserRequest(req *pb.UpdateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+	if err := validator.ValidateUsername(req.GetUsername()); err != nil {
+		violations = append(violations, fieldViolation("username", err))
+	}
+
+	if req.Password != nil {
+		if err := validator.ValidatePassword(req.GetPassword()); err != nil {
+			violations = append(violations, fieldViolation("password", err))
+		}
+	}
+
+	if req.FullName != nil {
+		if err := validator.ValidateFullName(req.GetFullName()); err != nil {
+			violations = append(violations, fieldViolation("full_name", err))
+		}
+	}
+
+	if req.Email != nil {
+		if err := validator.ValidateEmail(req.GetEmail()); err != nil {
+			violations = append(violations, fieldViolation("email", err))
+		}
+	}
+
+	return violations
+}
